[package]
name = "topq"
version = "0.2.0"
description = "A Timeout Priority Queue"
repository = "https://github.com/jamesmunns/topq"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
generic-array = "0.14.2"
